--- a/.config
+++ b/.config
@@ -1,1 +1,48 @@
-# This is an empty file, please overwrite it after generating the .config file with the source code
+# Config file for OpenWRT 23.05.5
+
+CONFIG_TARGET_ar71xx=y
+CONFIG_TARGET_ar71xx_generic=y
+CONFIG_TARGET_ar71xx_generic_device_xiaomi_ac2350=y
+
+# Select the system and packages to be included in the build
+CONFIG_PACKAGE_base-files=y
+CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-app-firewall=y
+CONFIG_PACKAGE_luci-app-opkg=y
+CONFIG_PACKAGE_wpa-supplicant=y
+CONFIG_PACKAGE_wireless-tools=y
+CONFIG_PACKAGE_iptables=y
+
+# Kernel modules
+CONFIG_PACKAGE_kmod-usb-core=y
+CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_kmod-ath79-phy=y
+CONFIG_PACKAGE_kmod-ath9k=y
+
+# Network configuration
+CONFIG_PACKAGE_odhcpd-ipv6only=y
+CONFIG_PACKAGE_dnsmasq=y
+CONFIG_PACKAGE_dhcp-relay=y
+
+# Enable support for IPv6
+CONFIG_IPV6=y
+CONFIG_PACKAGE_odhcpd-ipv6only=y
+CONFIG_PACKAGE_ipv6-helper=y
+
+# Enable USB support
+CONFIG_PACKAGE_kmod-usb-ehci=y
+CONFIG_PACKAGE_kmod-usb-ohci=y
+
+# Enable additional utilities
+CONFIG_PACKAGE_ping6=y
+CONFIG_PACKAGE_luci-app-advanced-reboot=y
+CONFIG_PACKAGE_luci-app-sqm=y
+
+# Disable WiFi 2.4GHz if needed (or enable below for specific configurations)
+# CONFIG_PACKAGE_kmod-mac80211=y
+# CONFIG_PACKAGE_kmod-ath9k=y
+# CONFIG_PACKAGE_ath9k-htc=y
+
+# Enable SSH access
+CONFIG_PACKAGE_dropbear=y
+CONFIG_PACKAGE_openssh-client=y
